--- a/code/Jen/html/angela.html
+++ b/code/Jen/html/angela.html
@@ -27,6 +27,7 @@ Html lab 1: Bio-->
       ul {
         text-align: left; 
         margin-left: 35%;
+        list-style-type: square;
 
       }
       
