had to start over!

--- a/code/cesar/html_css/lab02/main.html
+++ b/code/cesar/html_css/lab02/main.html
@@ -7,6 +7,9 @@
     <title>Real Estate Landing Page</title>
 </head>
 <body>
-    
-</body>
+    <main>
+        <p>Welcome! I am sure that you are well aware of the on going treat of randsomeware.</p>
+        <p>This is why you are here, we know.</p>
+    </main>
+    <main>
 </html>
