--- a/2 HTML + CSS/examples/flexbox.html
+++ b/2 HTML + CSS/examples/flexbox.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-      <meta charset="UTF-8"/>
-      <title>Flexbox demo</title>
-      <link rel="stylesheet" type="text/css" href="flexbox.css" />
-  </head>
-  <body>
-    <div class="flex-container">
-      <div>1</div>
-      <div>2</div>
-      <div id="more-special">3</div>
-      <div>4</div>
-      <div>5</div>
-      <div id="special">6</div>
-      <div>7</div>
-      <div>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Perisphinctes_wartae_-_Museum_fur_Naturkunde%2C_Berlin_-_DSC00011.JPG/800px-Perisphinctes_wartae_-_Museum_fur_Naturkunde%2C_Berlin_-_DSC00011.JPG">
-      </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>Flexbox demo</title>
+  <link rel="stylesheet" type="text/css" href="flexbox.css" />
+</head>
+
+<body>
+  <div class="flex-container">
+    <div>1</div>
+    <div>2</div>
+    <div id="more-special">3</div>
+    <div>4</div>
+    <div>5</div>
+    <div id="special">6</div>
+    <div>7</div>
+    <div>
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Perisphinctes_wartae_-_Museum_fur_Naturkunde%2C_Berlin_-_DSC00011.JPG/800px-Perisphinctes_wartae_-_Museum_fur_Naturkunde%2C_Berlin_-_DSC00011.JPG">
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
