--- a/code/faith/HTML/lab02/lab02.html
+++ b/code/faith/HTML/lab02/lab02.html
@@ -12,7 +12,8 @@
        <h1>Jet Lux</h1>
        <q>Here at Jet Lux, we sore to get you the jet of you dreams</q>
     </header>
-    <div class="main">
+        <div id="main">
+        <!-- <div><img class="img" src="jet1.jpeg" alt=""> -->
         <img class="img" src="jet1.jpeg" alt="">
         <p class="p">With our most modest style, we bring you comfort over looks with this beautiful lounge feel</p>
         <img class="img" src="jet2.jpeg" alt="">
@@ -25,7 +26,7 @@
         <p class="p">Those who want the finer things of life while still keeping it classy, our amber coated decor will fit great.</p>
         <img class="img" src="jet6.jpeg" alt="">
         <p class="p">A family affair? bring your favorite familly to our all new diner room layout decor.</p>
-    </div>
+        </div>
     <footer>
         <h1>Come see us today!</h1>
     </footer>
