--- a/code/mileidy/HTML_CSS/lab02/lab02.html
+++ b/code/mileidy/HTML_CSS/lab02/lab02.html
@@ -1,1 +1,33 @@
-saving branch start process
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="lab02.css">
+    <title>Mileidys Beauty LLC</title>
+
+</head>
+
+<body>
+
+<h1>Mileidys Beauty LLC</h1>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</body>
+</html>
