--- a/code/faith/HTML/lab03/lab03.html
+++ b/code/faith/HTML/lab03/lab03.html
@@ -38,5 +38,90 @@
     <div class="welcome">
         <h2>Explore many reviews on everybodies favorite animes!</h2>
     </div>
+    <div class="blog">
+        <p>
+            A gay musical, called Gay. That's quite gay. Gay musical? Aren't all musicals gay? This must be, like, the gayest musical ever. Oh really? Then why don't you come down and make me then. You mean 999. Yes, yes, I mean 999! Yeah, I know. That's the American one, you berk! Dear Sir stroke Madam, I am writing to inform you of a fire which has broken out at the premises of... I don't see how they couldn't just keep it as it was. How hard is it to remember 911? Yes! If there were such a thing as a drudgeon, that is what we'd be to them.
+        </p>
+        <b>
+            AnimeSnob13_
+        </b>
+        <h6>
+            Oct 03,2017
+        </h6>
+    </div>
+    <div class="blog">
+        <p>
+            I mean, they have no respect for us up there! No respect whatsoever! We're all just drudgeons to them! No, no there you go, no there you go. I just heard it come on. Yeah, you do know how a button works don't you? No, not on clothes. 0115... no... 0118... no... 0118 999 ... 3. Hello? Is this the emergency services? Then which country am I speaking to? Hello? Hello? Yeah, you do know how a button works don't you? No, not on clothes. Yeah, you need to turn it on... uh, the button turns it on.
+        </p>
+        <b>
+            CoolGuyAkatski_69
+        </b>
+        <h6>
+            Oct 20,2018
+        </h6>
+    </div>
+    <div class="blog">
+        <p>
+            So, Jonathan, how was the pull-out? You’re pretty cute, you know that? YOU BETTER RUN! She's our friend, and she's crazy! So, Jonathan, how was the pull-out? It’s about the shadow monster, isn’t it? It’s finger-lickin’ good. So, Jonathan, how was the pull-out?
+
+She shut one door! With her mind! This is not yours to fix alone. You act like you’re all alone out there in the world, but you’re not. You’re not alone. Why are you keeping this curiosity door lock? No... no El, you're not the monster. You saved me. Do you understand? You saved me.
+        </p>
+        <b>
+            Kakashi4Eva_2
+        </b>
+        <h6>
+            Sept 13,2019
+        </h6>
+    </div>
+    <div class="blog">
+        <p>
+            Kimochi Sugoi kimochi fuzakeru chotto arigatou chotto, fuzakeru itadakimasu Otaku Tomodachi doko fuzakeru okasan. Ureshiii doki doki Senpai nii san itadakimasu Imoto nii san, chikara damaru doki doki doko arigatou nii san damasu. Otaku Senpai okasan chikara chikara kimochi Tomodachi chotto. Ureshiii doko Oniisan, Oniisan Sugoi doko okasan Daijobu Daijobu Oppai doko doki doki doki doki arigatou. Oppai Daijobu Tomodachi Imoto fuzakeru Tomodachi Tomodachi Tsundere, Kawaii Oppai Baka damasu fuzakeru.
+        </p>
+        <b>
+            Ichigo_Rules_Goku_Drules
+        </b>
+        <h6>
+            Jan 12,2018
+        </h6>
+    </div>
+    <div class="blog">
+        <p>
+            Damaru Senpai chikara Baka kimochi, doki doki Ureshiii Sugoi Kawaii Sugoi Oppai Tsundere kimochi. Tsundere Ureshiii Imoto nii san Sugoi doki doki Senpai. Sugoi Ureshiii kimochi, Kawaii Ureshiii chotto Tomodachi okasan damaru Kawaii. Tsundere doko itadakimasu Sugoi Senpai Kawaii Ureshiii Otaku okasan. Damasu doko damasu, Otaku damasu fuzakeru Ureshiii kimochi Tsundere itadakimasu. Imoto Imoto fuzakeru chikara Kawaii, Otaku Otaku kimochi Kawaii fuzakeru kimochi Tomodachi doki doki. Itadakimasu Oniisan Oniisan Tsundere Baka Kawaii kimochi. Damasu arigatou doko fuzakeru nii san arigatou Kawaii. Baka chikara Oppai Baka damasu Tsundere okasan.
+
+        </p>
+        <b>
+            SleepyZentesu__
+        </b>
+        <h6>
+            Feb 08,2018
+        </h6>
+    </div>
+    <div class="blog">
+        <p>
+            Okasan Otaku arigatou nii san chikara, itadakimasu Daijobu doko doko chotto arigatou Ureshiii Ureshiii. Oppai doko Imoto, itadakimasu doki doki doki doki itadakimasu damaru fuzakeru chikara. Daijobu Ureshiii Oppai damaru damaru okasan Daijobu. Oniisan damasu damaru Kawaii Oniisan Daijobu chikara fuzakeru doko. Chotto Kawaii Baka, nii san Senpai Baka Oniisan itadakimasu damasu Oniisan Daijobu Senpai doko.
+        </p>
+        <b>
+            Saiki's_left_lens
+        </b>
+        <h6>
+            March 11,2019
+        </h6>
+    </div>
+    <div class="blog">
+        <p>
+            Daijobu fuzakeru Kawaii Daijobu Baka Tsundere Daijobu Baka Oppai. Ureshiii itadakimasu chotto Oppai arigatou nii san, fuzakeru Sugoi Tsundere Senpai Otaku damasu Senpai nii san. Arigatou Baka Tomodachi damasu Imoto Oniisan kimochi fuzakeru Daijobu. Ureshiii okasan Tsundere doki doki damaru Tsundere nii san. Tsundere fuzakeru Otaku Sugoi doki doki Baka Otaku. Sugoi Sugoi Oppai Oniisan doko doki doki doko. Chotto nii san fuzakeru doki doki Otaku Tsundere Senpai itadakimasu. Tomodachi doki doki itadakimasu chotto, damaru Otaku doki doki damasu Baka itadakimasu damaru chotto okasan Baka. Kimochi doko Imoto Baka chotto Senpai chotto Tomodachi, Otaku chikara chikara Senpai chotto arigatou
+        </p>
+        <b>
+            Saitama_Solos2
+        </b>
+        <h6>
+            April 22,2022
+        </h6>
+    </div>
+    <footer>
+        <h3>
+            Footer for now
+        </h3>
+    </footer>
 </body>
 </html>
