--- a/code/patrick/html/lab03point1/lab03.html
+++ b/code/patrick/html/lab03point1/lab03.html
@@ -10,7 +10,7 @@
 </head>
 <body class="flex">
     <div class="title">
-        <p>The Cheeseburger blog</p>
+        <h1>The Cheeseburger blog</h1>
 
     </div>
 
@@ -28,7 +28,9 @@
         
         <a href="">Best Cheeseburger recipes</a>
         <br>
+        <br>
         <a href="">Cheeseburger Hall of Fame</a>
+        <br>
         <br>
         <a href="">History of the Cheeseburger</a>
         
@@ -37,13 +39,13 @@
     </div>
 
     <div class="posts">
-        <p>posts</p>
-        <p>They say you’re never supposed to meet your idols. In this case, it’s a good thing your idol is inanimate.
+        <p>Posts</p>
+        <article>They say you’re never supposed to meet your idols. In this case, it’s a good thing your idol is inanimate.
             Cheeseburgers are never going to give you up or let you down. They’ll also never run around or desert you.
             They’ll never make you cry, unless it’s from sheer joy. Cheeseburgers certainly won’t say goodbye either.
-            Finally, cheeseburgers are incapable of telling lies or hurting you. On the flip side, they can still Rick Roll you</p>
+            Finally, cheeseburgers are incapable of telling lies or hurting you. On the flip side, they can still Rick Roll you </article>
 
-        <p>Epic cheeseburgers come in all kinds of manifestations, but we want them in and around our mouth no matter what.
+        <article> cheeseburgers come in all kinds of manifestations, but we want them in and around our mouth no matter what.
             Slide those smashed patties with the gently caramelized meat fat between a toasted brioche bun and pass it over.
             You fall in love with the cheeseburger itself but the journey ain’t half bad either.
             They’re the childhood friend that knows your highest highs and lowest lows. 
@@ -54,10 +56,12 @@
             but don’t let that make you forget about the ol’ faithful with American cheddar and a squishy bun.
             Lettuce remind you that cheeseburgers come in all forms - bun intended.
             Pop quiz: what’s the greatest thing to happen to your mind, body, and soul in recent history? 
-            A cheeseburger, obviously. Cheeseburgers know that what you want can also be what you need.</p>    
+            A cheeseburger, obviously. Cheeseburgers know that what you want can also be what you need. </article>    
 
 
     </div>
+
+    <footer>Thanks for visiting the Cheeseburger Blog, we hope you have a cheesy day!</footer>
 
 
 </body>
