fixed the responsiveness issues, caused more problems, fixed them too.

--- a/code/Jen/html/03_blog.html
+++ b/code/Jen/html/03_blog.html
@@ -14,14 +14,13 @@ Html lab 3: Blog
 
 <link rel="stylesheet" type="text/css" href="03_blog.css"/>
 
-
     </head>
 <div class="flex">
 <div class="grid">
 
     <header>
         <div>
-      <p>The Art of Sauntering: An Ode to John Muir</p>
+      <h1><p>The Art of Sauntering: An Ode to John Muir</p></h1>
       
       <nav>
         <ul>
@@ -33,7 +32,7 @@ Html lab 3: Blog
     </nav>
         </div>
     </header>
- 
+ <body>
     <aside class="sidebar-left">
         <div>
         <h2 class="header"> Stuff about the John Muir Monument</h2>
@@ -79,11 +78,13 @@ Html lab 3: Blog
     <footer>
         <div>
         <figure>
-            <figcaption> To learn more about the Sierra Club and John Muir, <a href="default.asp" target="_blank">click here.</a> </p></figcaption>
-    
+            <figcaption> To learn more about the Sierra Club and John Muir, <a href="https://www.sierraclub.org">click here.</a> </p>
+            </figcaption>
+    </figure>
       <img class="image" src="https://www.treehugger.com/thmb/kFHb3MdQUfLfgOMao49tRWpx2dI=/768x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/__opt__aboutcom__coeus__resources__content_migration__mnn__images__2018__04__John_Muir_hand_on_tree-622a987be6d54aa1993072cdb7363ca4.jpg" alt="John Muir by a tree">
     </figure>
     </div>    
+  </body>
     </footer>
   </div>
 </div>
