--- a/code/mileidy/HTML_CSS/lab02/lab02.html
+++ b/code/mileidy/HTML_CSS/lab02/lab02.html
@@ -10,24 +10,71 @@
 </head>
 
 <body>
+<div>
+    <header> 
+    <img id="photo" src="logo_white_background.jpg" alt="img">
 
-<h1>Mileidys Beauty LLC</h1>
+    <h1 id="about">A little bit about us!</h1>
+    
+    <article>
+        <p id="intro">
+            Hello and Welcome! Thank you for taking the time to take a look at our website and get to know alittle bit more about us. The business was established in 1978 and has been expanding ever since! We pride ourselves on the quality and the variety of our services. We cant wait to service you and bring all your beauty needs to life!
+        </p>
+    </article>
+
+    <h1>Here are some of our services we offer</h1>
+
+    </header>
+
+    <div class="gallery">
+
+    <div class="gallery-item">
+
+    <h2>Silk Presses</h2>
+
+    <img id="silk" src="silk.jpg" alt="img">
+
+    <p id="second">Smooth and straighten natural hair with a silk press. No hot comb needed, this press can be done with a hot comb, flat iron, and or roller set.</p>
+    </div>
+
+    <div class="gallery-item">
+
+    <h2>Makeup</h2>
+
+    <img id="makeup" src="makeup.jpg" alt="img">
+
+    <p>This is an example of one of the many looks we can provide for you! This beautiful client requested a natural look with a brighter lip!</p>
+
+    <h2>Mens Cut</h2>
+
+    <img id="mens" src="mens cut.jpg" alt="img">
+
+    <p>We offer a variety of Mens Cuts and other mens services such as colors, cuts, and even color!</p>
+    </div>
+    </div>
 
 
+    
+    <footer>
+        <h2 id="booking">Booking link
+        <a id="link" href="https://www.styleseat.com/m/v/mileidymartinez">Click Here!</a></h2>
+    </footer>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+</div>
 
 </body>
 </html>
+
+
+
+
+
+<!-- getting three-four photos to fit properly  -->
+
+<!-- getting my logo to cover 100% of the width up top -->
+
+<!-- centering photos on larger screen(ipad) -->
+
+<!-- making font larger -->
+
+<!-- media queries for desk top -->
