--- a/2 HTML + CSS/examples/coffee-shop.html
+++ b/2 HTML + CSS/examples/coffee-shop.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Orchid Coffee Shop</title>
   <link rel="stylesheet" type="text/css" href="coffee-shop.css" />
+  <script src="https://kit.fontawesome.com/98976c9594.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -153,6 +154,29 @@
 123 Main St 
 Springfield, ND
       </pre>
+    </div>
+
+    <div>
+      <h3>Contact</h3>
+      <ul class="menu-list">
+        <li>
+          <!-- Font Awesome icon -->
+          <i class="fa-brands fa-twitter fa-lg"></i>
+          <span>@ClassOrchid</span>
+        </li>
+        <li>
+          <!-- FA icon, with flip animation, with optional duration setting -->
+          <i class="fa-solid fa-envelope fa-lg fa-flip" style="--fa-animation-duration: 2s;"></i>
+          <a href="mailto:hello@orchid.coffee">hello@orchid.coffee</a>
+        </li>
+        <li>
+          <a href="tel:+11234567890">
+            <!-- FA icon, flipped horizontally -->
+            <i class="fa-solid fa-phone fa-lg fa-flip-horizontal"></i>
+          </a>
+          <span>123-456-7890</span>
+        </li>
+      </ul>
     </div>
   </footer>
 
