--- a/code/jordyn/html/lab01/lab01.html
+++ b/code/jordyn/html/lab01/lab01.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="lab01.css" />
-  </head>
-  <body>
-    <h1>Elon Musk</h1>
-    <picture>
-      <img
-        id="MuskImage"
-        class="image1"
-        src="https://image.cnbcfm.com/api/v1/image/105773439-1551717349171rtx6p9uc.jpg?v=1551717410"
-        alt="Elon Musk"
-        width="800"
-      />
-    </picture>
-    <h2>
-      Elon Reeve Musk (born June 28, 1971) is a business magnate, industrial
+</head>
+<body>
+    <div class="header">
+        <div id="header-left">
+            <h1 id="elon-name">Elon Musk</h1>
+            <p id="wiki-blip">
+                Elon Reeve Musk (born June 28, 1971) is a business magnate, industrial
       designer, engineer, and philanthropist. He is the founder, CEO, CTO and
       chief designer of SpaceX; early investor, CEO and product architect of
       Tesla, Inc.; founder of The Boring Company; co-founder of Neuralink; and
@@ -29,33 +23,33 @@
       As of October 19, 2020, his net worth was estimated by Forbes to be
       US$91.9 billion, making him the 5th richest person in the world. He is
       also the longest tenured CEO of any automotive manufacturer globally.
-    </h2>
-    <p>
-      More information can be found on his
+            </p>
+        </div>
+        <img id="musk-profile" src="https://image.cnbcfm.com/api/v1/image/105773439-1551717349171rtx6p9uc.jpg?v=1551717410" alt="">
+    </div>
+    <div>
+        <p>
+            More information can be found on his
       <a href="https://en.wikipedia.org/wiki/Elon_Musk">Wikipedia Page.</a>
-    </p>
-    <h3>
-      Places lived:
-      <ul>
-        <li>Pretoria (Born)</li>
-        <li>Kingston</li>
-        <li>Bel Air</li>
-        <li>Philadelphia</li>
-      </ul>
-    </h3>
-    <br />
-    <h4> 
-      <a class="centered" href="https://twitter.com/elonmusk/status/1055653541317042177?lang=en">
-        "im actually a cat girl here's a selfie rn"</a
-      >
-      <br />
-      <picture
-        ><img
-          id="Catgirl"
-          src="https://pbs.twimg.com/media/DqZvTKCUUAEKNMA?format=jpg&name=small"
-          alt="Cat Girl Elon Musk"
-          width="200"
-      /></picture>
-    </h4>
-  </body>
+        </p>
+    </div>
+    <div>
+        <p>
+            Places lived
+            <ul>
+                <li>Pretoria (Born)</li>
+                <li>Kingston</li>
+                <li>Bel Air</li>
+                <li>Philadelphia</li>
+              </ul>
+        </p>
+    </div>
+    <div id="quote">
+        <div id="quote-left">
+            <a href="https://twitter.com/elonmusk/status/1055653541317042177?lang=en">
+                "im actually a cat girl here's a selfie rn"</a>
+        </div>
+        <img id="cat-girl" src="https://pbs.twimg.com/media/DqZvTKCUUAEKNMA?format=jpg&name=small" alt="">
+    </div>
+</body>
 </html>
