--- a/code/teyon/html+css/lab04/burritos.html
+++ b/code/teyon/html+css/lab04/burritos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDX Burrito</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="burritosite.css">
 </head>
 <body>
     <form action="https://webhook.site/fb9b1eeb-b25f-4cb3-8852-805f8590c479" method="post">
@@ -20,7 +20,6 @@
         <input type="text" id="username" name="username"><br><br>
         <label for="pwd">password</label>
         <input type="password" id="pwd" name="pwd"><br><br>
-        <input type="submit" value="Submit">
         <div id="tortillaoptions">
             <nav>
                 <h2>Pick a Tortilla</h2>
@@ -77,7 +76,8 @@
         </div><br><br><br>
 
         <label for="deliveryinstructions">Delivery Instructions</label><br><br><b></b>
-        <textarea name="deliveryinstructions" id="deliveryinstructions" cols="60" rows="10"></textarea>
+        <textarea name="deliveryinstructions" id="deliveryinstructions" cols="60" rows="10"></textarea><br><br><br>
+        <input type="submit" value="Submit">
 
         
     </form>
