--- a/code/faith/HTML/lab04html/lab04.html
+++ b/code/faith/HTML/lab04html/lab04.html
@@ -1,80 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="lab04.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Rubik+Maze&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burrito Form</title>
 </head>
 <body>
-    <form action="">
-        <h1>Burrito Form</h1>
-        <h3>Email</h3>
-        <input type="email" placeholder="Email" required><br>
+    <form action="https://webhook.site/845f9e90-c4af-4927-9324-7110074e5863" method="post">
+        <div class="personal">   
+            <h1>Burrito Locos!</h1>
+            <h3>Email</h3>
+            <input type="email" placeholder="Email" required><br>
+            <h3>Name for the order</h3>
+            <input type="text" placeholder="First Name" required><br>
+            <input type="text" placeholder="Last Name"><br>
+            <h3>Password</h3>
+            <input type="password" placeholder="password">
+        </div>
 
-        <h3>Name for the order</h3>
-        <input type="text" placeholder="First Name" required><br>
-        <input type="text" placeholder="Last Name"><br>
+        <div class="tortilla">
+            <h3>Tortilla</h3>
+            <input type="radio" name="tortilla" value="white" required>White
+            <input type="radio" name="tortilla" value="corn">Corn
+            <input type="radio" name="tortilla" value="spinach">Spinach
+            <input type="radio" name="tortilla" value="wheat">Wheat
+            <input type="radio" name="tortilla" value="bowl">Bowl
+        </div>
 
-        <h3>Password</h3>
-        <input type="password" placeholder="password">
+        <div class="protien">
+            <h3>Protien</h3>
+            <select name="Protien" id="protien">
+                <option value="chicken">Chicken</option>
+                <option value="sofritos">Sofritos</option>
+                <option value="steak">Steak</option>
+                <option value="beef">Beef</option>
+                <option value="veggi">Veggi</option>
+                <option value="shrimp">Shrimp</option>
+                <option value="none">No Protien</option> <br>
+            </select>
+        </div>
 
-        <h3>Tortilla</h3>
-        <input type="radio" name="tortilla" value="white">White
-        <input type="radio" name="tortilla" value="corn">Corn
-        <input type="radio" name="tortilla" value="spinach">Spinach
-        <input type="radio" name="tortilla" value="wheat">Wheat
-        <input type="radio" name="tortilla" value="bowl">Bowl
+        <div class="veggies">
+            <h3>Veggies</h3>
+            <input type="checkbox" id="Blackbeans" name="Blackbeans" value="blackbeans">
+            <label for="Blackbeans">Black Beans</label><br>
+            <input type="checkbox" id="RefriedBeans" name="RefriedBeans" value="refriedbeans">
+            <label for="RefriedBeans">Refried Beans</label><br>
+            <input type="checkbox" id="PintoBeans" name="PintoBeans" value="pintobeans">
+            <label for="PintoBeans">Pinto Beans</label><br>
+            <input type="checkbox" id="fagitamix" name="fagitamix" value="fagitamix">
+            <label for="fagitamix">Fagita Mix</label><br>
+            <input type="checkbox" id="lettuce" name="lettuce" value="lettuce">
+            <label for="lettuce">Lettuce</label><br>
+            <input type="checkbox" id="Jalapeños" name="Jalapeños" value="Jalapeños">
+            <label for="">Jalapeños</label><br>
+        </div>
 
-        <h3>Protien</h3>
-        <select name="Protien" id="protien">
-            <option value="chicken">Chicken</option>
-            <option value="sofritos">Sofritos</option>
-            <option value="steak">Steak</option>
-            <option value="beef">Beef</option>
-            <option value="veggi">Veggi</option>
-            <option value="shrimp">Shrimp</option>
-            <option value="none">No Protien</option> <br>
-        </select>
+        <div class="addons">
+            <h3>Add ons</h3>
+            <input type="checkbox" id="sourcream" name="sourcream" value="sourcream">
+            <label for="sourcream"> SourCream</label><br>
+            <input type="checkbox" id="guac" name="guac" value="guac">
+            <label for="guac"> Guac</label><br>
+            <input type="checkbox" id="queso" name="queso" value="queso">
+            <label for="queso"> Queso</label><br>
+            <input type="checkbox" id="extracheese" name="extracheese" value="extracheese">
+            <label for="extracheese">Extra Cheese</label><br>
+            <input type="checkbox" id="doubleprotien" name="doubleprotien" value="doubleprotien">
+            <label for="doubleprotien">Double Protien</label><br>
+            <input type="checkbox" id="utensils" name="utensils" value="utensils">
+            <label for="utensils">Utensils</label><br>
+        </div>
 
-        <h3>Veggies</h3>
-        <input type="checkbox" id="Blackbeans" name="Blackbeans" value="blackbeans">
-        <label for="Blackbeans">Black Beans</label><br>
-        <input type="checkbox" id="RefriedBeans" name="RefriedBeans" value="refriedbeans">
-        <label for="RefriedBeans">Refried Beans</label><br>
-        <input type="checkbox" id="PintoBeans" name="PintoBeans" value="pintobeans">
-        <label for="PintoBeans">Pinto Beans</label><br>
-        <input type="checkbox" id="fagitamix" name="fagitamix" value="fagitamix">
-        <label for="fagitamix">Fagita Mix</label><br>
-        <input type="checkbox" id="lettuce" name="lettuce" value="lettuce">
-        <label for="lettuce">Lettuce</label><br>
-        <input type="checkbox" id="Jalapeños" name="Jalapeños" value="Jalapeños">
-        <label for="">Jalapeños</label><br>
+        <div class="get">
+            <h3>How would you like to recieve your food?</h3>
+            <input type="radio" name="get" value="pickup" required>Pickup
+            <input type="radio" name="get" value="delivery">Delivery
+            <input type="radio" name="get" value="curbside">Curbside
+        </div>
 
+        <div class="instructions">
+            <h3>Delivery Instructions</h3>
+            <input type="textarea" placeholder="Leave at door, extra untensils...etc.."><br>
+        </div>
+        
+        <div class="submit">
+            <input type="submit">
+        </div>
 
-        <h3>Add ons</h3>
-        <input type="checkbox" id="sourcream" name="sourcream" value="sourcream">
-        <label for="sourcream"> SourCream</label><br>
-        <input type="checkbox" id="guac" name="guac" value="guac">
-        <label for="guac"> Guac</label><br>
-        <input type="checkbox" id="queso" name="queso" value="queso">
-        <label for="queso"> Queso</label><br>
-        <input type="checkbox" id="extracheese" name="extracheese" value="extracheese">
-        <label for="extracheese">Extra Cheese</label><br>
-        <input type="checkbox" id="doubleprotien" name="doubleprotien" value="doubleprotien">
-        <label for="doubleprotien">Double Protien</label><br>
-        <input type="checkbox" id="utensils" name="utensils" value="utensils">
-        <label for="utensils">Utensils</label><br>
-
-        <h3>How would you like to recieve your food?</h3>
-        <input type="radio" name="tortilla" value="pickup">Pickup
-        <input type="radio" name="tortilla" value="delivery">Delivery
-        <input type="radio" name="tortilla" value="curbside">Curbside
-
-        <h3>Delivery Instructions</h3>
-        <input type="textarea" placeholder="Leave at door, extra untensils...etc.."><br>
-
-        <input type="submit">
     </form>
 </body>
 </html>
