In an effort to get caught up, the page does not have media queries. I'll add them if I somehow have time after catching up again

--- a/code/jordyn/html/lab03/lab03.html
+++ b/code/jordyn/html/lab03/lab03.html
@@ -15,19 +15,19 @@
       <a class="header-item" href="./profile.html" id="profile">Profile</a>
     </div>
 
-    <div class="sidebar">
-      <p class="sidebar-item" id="sidebar-header">Blogged</p>
-      <a class="sidebar-item"><span class="sidebar-link">Blog #1</span></a>
-      <a class="sidebar-item"><span class="sidebar-link">Blog #2</span></a>
-      <a class="sidebar-item"><span class="sidebar-link">Blog #3</span></a>
-      <a class="sidebar-item"><span class="sidebar-link">Blog #4</span></a>
-      <a class="sidebar-item"><span class="sidebar-link">Blog #5</span></a>
-      <a class="sidebar-item"><span class="sidebar-link">Blog #6</span></a>
-      <a class="sidebar-item"><span class="sidebar-link">Blog #7</span></a>
-      <a class="sidebar-item"><span class="sidebar-link">Blog #8</span></a>
-    </div>
-
+    
     <div class="wrapper">
+      <div class="sidebar">
+        <p class="sidebar-item" id="sidebar-header">Blogged</p>
+        <a class="sidebar-item"><span class="sidebar-link">Blog #1</span></a>
+        <a class="sidebar-item"><span class="sidebar-link">Blog #2</span></a>
+        <a class="sidebar-item"><span class="sidebar-link">Blog #3</span></a>
+        <a class="sidebar-item"><span class="sidebar-link">Blog #4</span></a>
+        <a class="sidebar-item"><span class="sidebar-link">Blog #5</span></a>
+        <a class="sidebar-item"><span class="sidebar-link">Blog #6</span></a>
+        <a class="sidebar-item"><span class="sidebar-link">Blog #7</span></a>
+        <a class="sidebar-item"><span class="sidebar-link">Blog #8</span></a>
+      </div>
       <div class="sub-wrapper">
         <div class="floating-box">
           <p id="top-blog-header">Blog #9</p>
@@ -50,7 +50,52 @@
             class="img"
           />
         </div>
+        <div class="floating-box">
+          <p id="top-blog-header">Blog #6</p>
+          <img
+            src="https://sm.mashable.com/mashable_sea/photo/default/man-fakes-death-cat-q6u_2z9w.png"
+            class="img"
+          />
+        </div>
+        <div class="floating-box">
+          <p id="top-blog-header">Blog #5</p>
+          <img
+            src="https://sm.mashable.com/mashable_sea/photo/default/man-fakes-death-cat-q6u_2z9w.png"
+            class="img"
+          />
+        </div>
+        <div class="floating-box">
+          <p id="top-blog-header">Blog #4</p>
+          <img
+            src="https://sm.mashable.com/mashable_sea/photo/default/man-fakes-death-cat-q6u_2z9w.png"
+            class="img"
+          />
+        </div>
+        <div class="floating-box">
+          <p id="top-blog-header">Blog #3</p>
+          <img
+            src="https://sm.mashable.com/mashable_sea/photo/default/man-fakes-death-cat-q6u_2z9w.png"
+            class="img"
+          />
+        </div>
+        <div class="floating-box">
+          <p id="top-blog-header">Blog #2</p>
+          <img
+            src="https://sm.mashable.com/mashable_sea/photo/default/man-fakes-death-cat-q6u_2z9w.png"
+            class="img"
+          />
+        </div>
+        <div class="floating-box">
+          <p id="top-blog-header">Blog #1</p>
+          <img
+            src="https://sm.mashable.com/mashable_sea/photo/default/man-fakes-death-cat-q6u_2z9w.png"
+            class="img"
+          />
+        </div>
       </div>
+    </div>
+    <div class="footer">
+      I am a footer! Rawr!
     </div>
   </body>
 </html>
