--- a/code/faith/HTML/lab04html/lab04.html
+++ b/code/faith/HTML/lab04html/lab04.html
@@ -92,5 +92,7 @@
         </div>
 
     </form>
+    <footer><img src="burritos.png" alt="" height="50" width="50">
+    Thanks for Using Burrito Locos form!</footer>
 </body>
 </html>
