method is working.

--- a/code/cesar/html_css/lab04_burrito/main.html
+++ b/code/cesar/html_css/lab04_burrito/main.html
@@ -20,7 +20,7 @@
     </header>
 
     <div class="information">
-        <form action="https://webhook.site/9a3435c9-7e0d-4bd9-b3fa-f54123ea34a4" methood="POST">
+        <form action="https://webhook.site/9a3435c9-7e0d-4bd9-b3fa-f54123ea34a4" method="post">
             <lable for="name">Name:</lable>
             <input type="text" id="name" name="name" placeholder="Enter your name"><br>
             <label for="pword">Password:</label>
@@ -65,12 +65,14 @@
         <label for="toppings"><b>Choose additional toppings:</b></label><br>
         <input type="checkbox" name="sour-cream" value="yes">Sour Cream<br>
         <input type="checkbox" name="guac" value="yes">Guac<br>
-        <input type="checkbox" name="cheese" value="yes">Monteray Jack Cheese<br>
+        <input type="checkbox" name="cheese" value="yes">Monteray Jack Cheese<br><br>
+        <label for="delivery-instructions"><b>Delivery instructions?</b></label><br>
+        <textarea name="delivery-instructions">
+
+        </textarea>
         <input type="Submit" value="Submit">
         </form>
     </div>
-
-
 </body>
 
 </html>
