fixed salsa label

--- a/code/rob/html/lab4/lab4.html
+++ b/code/rob/html/lab4/lab4.html
@@ -80,10 +80,10 @@
                         <div id="salsa">
                             <h4>salsa</h4>
                                 <label class="container lab4-label" for="red">Red
-                                    <input type="radio" id="red" name="tortilla" value="red">
+                                    <input type="radio" id="red" name="salsa" value="red">
                                 </label>
                                 <label class="container lab4-label" for="green">Green
-                                    <input type="radio" id="green" name="tortilla" value="green">
+                                    <input type="radio" id="green" name="salsa" value="green">
                                 </label>
                         </div>
                     </div>
