add loops to js examples

--- a/5 JavaScript/examples/intro-to-js/index.html
+++ b/5 JavaScript/examples/intro-to-js/index.html
@@ -9,6 +9,7 @@
     <!-- <script src="variables-and-types.js"></script> -->
     <!-- <script src="arrays-and-objects.js"></script> -->
     <!-- <script src="functions-and-conditionals.js"></script> -->
+    <!-- <script src="loops.js"></script> -->
     <script src="prompt-and-alert.js"></script>
 </head>
 
