--- a/code/tony/js/lab01/part-b.html
+++ b/code/tony/js/lab01/part-b.html
@@ -15,9 +15,9 @@
         <input type="text" name="input" id="input" placeholder="hh:mm">
     </p>
     <p>
-        <div id="output">Enter a value.</div>
+        <div id="output"></div>
     </p>
-    <script src="part-a.js"></script>
+    <script src="part-b.js"></script>
 </body>
 
 </html>
