--- a/5 JavaScript/examples/intro-to-js/index.html
+++ b/5 JavaScript/examples/intro-to-js/index.html
@@ -10,12 +10,52 @@
     <!-- <script src="arrays-and-objects.js"></script> -->
     <!-- <script src="functions-and-conditionals.js"></script> -->
     <!-- <script src="loops.js"></script> -->
-    <script src="prompt-and-alert.js"></script>
+    <!-- <script src="prompt-and-alert.js"></script> -->
+    <script src="events-and-dom-manipulation.js" defer></script>
 </head>
 
 <body>
+    <h3 id="header">Class Orchid's pizza</h3>
+    <table>
+        <tr>
+            <th>toppings</th>
+            <th>votes</th>
+        </tr>
+        <tr>
+            <td>mushrooms</td>
+            <td id="mushrooms">0</td>
+        </tr>
+        <tr>
+            <td>pineapple</td>
+            <td id="pineapple" class="secret-winner">0</td>
+        </tr>
+        <tr class="not-veg">
+            <td>anchovies</td>
+            <td id="anchovies">0</td>
+        </tr>
+        <tr>
+            <td>kale</td>
+            <td id="kale">0</td>
+        </tr>
+        <tr class="not-veg">
+            <td>sausage 🌶️🌶️🌶️🌶️🌶️</td>
+            <td id="sausage">0</td>
+        </tr>
+    </table><br>
+    <hr><br>
 
-    hello world
+    <input type="checkbox" value="mushrooms">Mushrooms<br>
+    <input type="checkbox" value="pineapple">Pineapple<br>
+    <input type="checkbox" value="anchovies">Anchovies<br>
+    <input type="checkbox" value="kale">Kale<br>
+    <input type="checkbox" value="sausage">Spicy sausage<br>
+    <br><br>
+
+    <label for="person">Name:</label>
+    <input type="text" id="person" name="person">
+    <input type="button" value="click me!">
+
+    <div id='warning' style="color:red"></div>
 </body>
 
 </html>
