--- a/code/mobs/trojantroll/index.html
+++ b/code/mobs/trojantroll/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
+
 <body>
     <label for="additem">Add Item:</label>
-    <input type="tel" name="additem" id="additem" placeholder="Add Item">
+    <input type="text" name="additem" id="additem" placeholder="Add Item">
     <input type="button" value="add" id="addbutton">
 </body>
+
 </html>
