Jordyn's turn ended

--- a/code/mobs/trojantroll/index.html
+++ b/code/mobs/trojantroll/index.html
@@ -9,10 +9,18 @@
     <script src="script.js" defer></script>
 </head>
 
-<body>
+<body style="background-color: rgb(190, 190, 190)">
     <label for="additem">Add Item:</label>
-    <input type="text" name="additem" id="additem" placeholder="Add Item">
+    <input type="text" name="additem" id="additem" placeholder="Add Item" autofocus>
     <input type="button" value="add" id="addbutton">
+
+    <div class="container">
+        <ul id="todolist">
+
+        </ul>
+
+    </div>
+
 </body>
 
 </html>
