created arrays, built add function

--- a/code/mobs/room3/index.html
+++ b/code/mobs/room3/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="moblab.js"></script>
+    <script src="moblab.js" defer></script>
 </head>
 <body>
     <form>
         <h1>To-Do List</h1>
-        <input type="text" name="add_item">
-        <button type="submit">Add</button>
+        <input type="text" id="added" name="add-item">
+        <button type="submit" id="add-button">Add</button>
     </form>
 
     <form>
