--- a/code/mobs/trojantroll/index.html
+++ b/code/mobs/trojantroll/index.html
@@ -15,7 +15,7 @@
     <input type="button" value="add" id="addbutton">
 
     <div class="container">
-        <ul id="todolist">
+        <ul id="todolist" style="margin: 0; padding: 0;">
 
         </ul>
 
