--- a/code/mobs/fridayz/index.html
+++ b/code/mobs/fridayz/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="index.js" defer>
+    </script>
+
 </head>
+
 <body>
-    
+
+    <form>
+
+        <input type="text" class="todo-input">
+        <button type="submit" class="todo-button">To Do
+        </button>
+    </form>
+
+    <div class="todo-container">
+        <ul class="todo-list">
+        </ul>
+
+
+
+    </div>
+
 </body>
+
 </html>
