--- a/code/mobs/trojantroll/index.html
+++ b/code/mobs/trojantroll/index.html
@@ -16,10 +16,8 @@
     <input type="button" value="add" id="addbutton">
 
     <div class="container">
-        <ul id="todolist" style="margin: 0; padding: 0;">
-
-        </ul>
-
+        <ul id="todolist" style="margin: 0; padding: 0;"></ul>
+        <ul id="completed" style="margin: 0; padding: 0;"></ul>
     </div>
 
 </body>
