--- a/code/mobs/fridayz/index.html
+++ b/code/mobs/fridayz/index.html
@@ -21,8 +21,11 @@
     </form>
 
     <div class="todo-container">
+        <p>uncompleted</p>
         <ul class="todo-list">
         </ul>
+        <p>completed</p>
+        <ul class="completed-list"></ul>
 
 
 
