--- a/code/faith/JS/Lab01/lab01B.html
+++ b/code/faith/JS/Lab01/lab01B.html
@@ -8,6 +8,8 @@
     <script src="lab01B.js"></script>
 </head>
 <body>
-    
+    <input id="word" type="text">
+    <button id="enter">Enter</button>
+    <div id="codeword"></div>
 </body>
 </html>
