--- a/code/tony/js/lab05/index.html
+++ b/code/tony/js/lab05/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Todo List</title>
+    <script src="https://unpkg.com/vue@3" defer></script>
     <script src="js/site.js" defer></script>
     <link rel="stylesheet" href="css/site.css">
 </head>
