--- a/code/patrick/javascript/lab03/lab03ver2.html
+++ b/code/patrick/javascript/lab03/lab03ver2.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="lab03.js" defer>  </script>
+    <script src="lab03ver2.js" defer>  </script>
     <title>Document</title>
 </head>
 <body>
+    <input id="tAmount" type="number" >
+    <input id="submit" type="submit">
     
 </body>
 </html>
