--- a/code/faith/JS/Lab01/lab01B.html
+++ b/code/faith/JS/Lab01/lab01B.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="lab01B.js"></script>
+    <script defer src="lab01B.js"></script>
 </head>
 <body>
     <input id="word" type="text">
