--- a/code/faith/JS/lab02/lab02A.html
+++ b/code/faith/JS/lab02/lab02A.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="lab02A.js"></script>
+    <script src="lab02a.js"></script>
 </head>
 <body>
     
