--- a/code/faith/JS/lab02/lab02b.html
+++ b/code/faith/JS/lab02/lab02b.html
@@ -27,6 +27,7 @@
         <option value="km">km</option>
         <option value="yard">yard</option>
         <option value="inch">inch</option>
-    </select>
+    </select><br>
+    <button id="enter">Enter</button>
 </body>
 </html>
