figuring out logic

--- a/code/faith/JS/lab02/lab02b.html
+++ b/code/faith/JS/lab02/lab02b.html
@@ -29,5 +29,6 @@
         <option value="inch">inch</option>
     </select><br>
     <button id="enter">Enter</button>
+    <div id="result"></div>
 </body>
 </html>
