--- a/code/faith/JS/lab03/lab03b.html
+++ b/code/faith/JS/lab03/lab03b.html
@@ -57,5 +57,6 @@
         <option value="10">10</option>
     </select><br>
     <button id="enter">Enter</button>
+    <div id="result"></div>
 </body>
 </html>
