--- a/code/rob/js/lab3/lab3.html
+++ b/code/rob/js/lab3/lab3.html
@@ -5,11 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="lab3.css">
-    <script src="lab3a.js"></script>
-    <script src="lab3b.js"></script>
+    <!-- <script src="lab3a.js"></script> -->
+    <script src="lab3b.js" defer></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Quicksort</h1>
+    <hr>
+    <input type="text" id="numbers" placeholder="Enter numbers: 0-9">
+    <button id="buttonSort">Sort</button>
+    <ul id="sortingList"></ul>
+    <hr>
+    <p id="unsorted"></p>
+    <p id="sorted"></p>
 </body>
 </html>
