--- a/code/faith/JS/todos/index.html
+++ b/code/faith/JS/todos/index.html
@@ -11,9 +11,19 @@
 <body>
     <div id="app">
         <h1>To-Do List</h1>
-        <input v-model="todo" type="text" placeholder="Please enter something"><br>
-        <p>{{ todo }}</p>
-        <button v-on:click="">Add</button>
+        <input ref="input" id="input" v-model="todo.item" type="text" placeholder="Please enter something"><br>
+        <button type="submit" v-on:click="addTodo">Add</button>
+        <li v-for="item in todo">{{ item }}
+            <button type="submit" v-on:click="deleteTodo(item)">X</button>
+            <button type="submit" v-on:click="completeTodo(item)">Done</button>
+        </li>
+        <h2>Completed</h2>
+        <li v-for="item in complete">{{ item }}
+            <button type="submit" v-on:click="deleteComplete(item)">X</button>
+            <button type="submit" v-on:click="undoTodo(item)">Undo</button>
+
+        </li>
+        
     </div>
 
     <!-- Include Vue from a CDN of your choice, I chose unpkg -->
